--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [tox]
-envlist = py26, py27, py33, py34, py35, flake8
+envlist = py27, py34, py35, flake8
+skip_missing_interpreters = True
 
 [testenv:flake8]
 basepython=python
@@ -14,9 +15,8 @@ deps =
 commands =
     pip install -U pip
     py.test --basetemp={envtmpdir}
+sitepackages=True
 
-
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following lines:
-; deps =
-;     -r{toxinidir}/requirements.txt
+[pytest]
+norecursedirs = .cache .git .tox build *.egg-info
+addopts = -rsxXf --cov-report term-missing --cov=h5shelve
