remove flake8 from tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,6 @@
 [tox]
-envlist = py27, py34, py35, flake8
+envlist = py27, py34, py35
 skip_missing_interpreters = True
-
-[testenv:flake8]
-basepython=python
-deps=flake8
-commands=flake8 h5shelve
 
 [testenv]
 setenv =
